--- a/src/components/Cells/components/CellText/CellText.module.scss
+++ b/src/components/Cells/components/CellText/CellText.module.scss
@@ -13,6 +13,5 @@
 
 .caption {
     max-height: 18px;
-    margin-top: 1px;
     color: var(--tg-theme-subtitle-text-color);
 }
